--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@pierre/diffs": "^1.0.2",
-		"@radix-ui/themes": "^3.2.1",
+		"@base-ui/react": "^1.0.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
