--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"preview": "vite preview"
+		"preview": "bun run build && vite preview",
+		"deploy": "bun run build && wrangler deploy",
+		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
 		"@pierre/diffs": "^1.0.2",
@@ -15,14 +17,17 @@
 		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.3.10",
+		"@cloudflare/vite-plugin": "^1.19.0",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.2",
 		"@vitejs/plugin-react-swc": "^4.2.2",
 		"globals": "^16.5.0",
 		"typescript": "~5.9.3",
-		"vite": "npm:rolldown-vite@7.2.5",
-		"@biomejs/biome": "2.3.10"
+		"vite": "^7.2.5",
+		"wrangler": "^4.54.0"
 	},
 	"overrides": {
 		"vite": "npm:rolldown-vite@7.2.5"
